# Mini-Enterprise-AI-Assistant

./: .env.example  API_ENDPOINTS.md  README.md  SAMPLE_OUTPUTS.md  pyproject.toml
app/: __init__.py  config.py  logger.py  main.py
app/agents/: security_agent.py
app/api/: schemas.py
app/api/routes/: agent.py  chat.py  documents.py  health.py  integration.py
app/integrations/: github_integration.py
app/rag/: document_processor.py  embeddings.py  rag_chain.py  vector_store.py
data/: github_data.json  incident_logs.txt
data/documents/: audit_report.txt  compliance_report.txt  security_policy.txt
faiss_index/: index.pkl
templates/: index.html
